--- a/frontend/src/pages/LoginPage/components/Login.module.css
+++ b/frontend/src/pages/LoginPage/components/Login.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 400px;
   padding: 2rem;
+  margin:auto;
   border-radius: 16px;
   background-color: #111;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -19,6 +20,13 @@
   font-weight: 600;
   margin-bottom: 0.5rem;
 }
+
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+} 
 
 .formGroup {
   display: flex;
