--- a/frontend/src/pages/LoginPage/LoginPage.module.css
+++ b/frontend/src/pages/LoginPage/LoginPage.module.css
@@ -1,25 +1,11 @@
 .loginPage {
   min-height: 100vh;
+  height: 1000px;
   display: flex;
   flex-direction: column;
+  margin:auto;
   align-items: center;
   padding: 2rem;
   background-color: #000;
   color: #fff;
 }
-
-.title {
-  color: #fff;
-  margin-bottom: 2rem;
-  font-size: 2rem;
-  font-weight: 600;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.logo {
-  height: 40px;
-  width: auto;
-  filter: brightness(0) invert(1); /* Make SVG white */
-} 
