--- a/frontend/src/pages/HomePage/HomePage.module.css
+++ b/frontend/src/pages/HomePage/HomePage.module.css
@@ -2,7 +2,7 @@
   min-height: 100vh;
   background-color: #000;
   color: #fff;
-  /* padding-top: 64px; Height of the header */
+  padding-top: 1rem;
 }
 
 .homeHeader {
