--- a/frontend/src/pages/NotePage/NotePage.module.css
+++ b/frontend/src/pages/NotePage/NotePage.module.css
@@ -1,8 +1,6 @@
 .notePage {
-  min-height: 100vh;
   background-color: #000;
   color: #fff;
-  padding: calc(64px + 2rem) 1rem 2rem; /* Account for header height */
 }
 
 .noteHeader {
@@ -64,8 +62,9 @@
 }
 
 .pageContainer {
-  padding: 2rem;
+  /* padding: 2rem; */
   max-width: 1200px;
+  height: calc(100vh - 100px);
   margin: 0 auto;
   display: flex;
   flex-direction: column;
