--- a/frontend/src/pages/HomePage/components/NoteListView/SearchBar/SearchBar.module.css
+++ b/frontend/src/pages/HomePage/components/NoteListView/SearchBar/SearchBar.module.css
@@ -3,18 +3,28 @@
   display: flex;
   align-items: center;
   width: 100%;
+  padding: 0.25rem 0;
+}
+
+.searchContainer.open {
+    margin-bottom: 20px;
+    padding-bottom:20px;
+    border-bottom: 1px solid #2d2d2d;
+    height: 50px;
 }
 
 .searchButton {
   background: none;
   border: none;
-  padding: 0.5rem;
+  padding: 0.25rem .5rem;
   cursor: pointer;
   color: #9ca3af;
   transition: color 0.2s;
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 10px;
+  height: 10px;
 }
 
 .searchButton:hover {
@@ -22,7 +32,7 @@
 }
 
 .searchIcon {
-  font-size: 1.5rem !important;
+  font-size: 1rem !important;
 }
 
 .searchInputContainer {
@@ -34,21 +44,25 @@
   transition: width 0.3s ease-in-out;
   background-color: #1a1a1a;
   border-radius: 8px;
+  height: 10px;
 }
 
 .searchInputContainer.open {
   width: 100%;
+  height: 40px;
+  padding: 10px;
+  margin-bottom: 20px;
 }
 
 .searchInput {
   width: 100%;
-  padding: 0.75rem 1rem;
+  padding: 0.5rem 1rem;
   padding-right: 2.5rem;
   background-color: transparent;
   border: 1px solid #2d2d2d;
   border-radius: 8px;
   color: #fff;
-  font-size: 1rem;
+  font-size: 0.875rem;
 }
 
 .searchInput:focus {
