--- a/frontend/src/pages/HomePage/components/NoteListView/SearchBar/SearchBar.module.css
+++ b/frontend/src/pages/HomePage/components/NoteListView/SearchBar/SearchBar.module.css
@@ -3,55 +3,10 @@
   display: flex;
   align-items: center;
   width: 100%;
-  padding: 0.25rem 0;
-}
-
-.searchContainer.open {
-    margin-bottom: 20px;
-    padding-bottom:20px;
-    border-bottom: 1px solid #2d2d2d;
-    height: 50px;
-}
-
-.searchButton {
-  background: none;
-  border: none;
-  padding: 0.25rem .5rem;
-  cursor: pointer;
-  color: #9ca3af;
-  transition: color 0.2s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 10px;
-  height: 10px;
-}
-
-.searchButton:hover {
-  color: #fff;
-}
-
-.searchIcon {
-  font-size: 1rem !important;
-}
-
-.searchInputContainer {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 0;
-  overflow: hidden;
-  transition: width 0.3s ease-in-out;
-  background-color: #1a1a1a;
-  border-radius: 8px;
-  height: 10px;
-}
-
-.searchInputContainer.open {
-  width: 100%;
-  height: 40px;
-  padding: 10px;
   margin-bottom: 20px;
+  height: 50px;
+  top: 2px;
+  width: 100%;
 }
 
 .searchInput {
@@ -60,9 +15,9 @@
   padding-right: 2.5rem;
   background-color: transparent;
   border: 1px solid #2d2d2d;
-  border-radius: 8px;
   color: #fff;
   font-size: 0.875rem;
+  top: 16px
 }
 
 .searchInput:focus {
