--- a/frontend/src/pages/HomePage/components/NoteListView/DesktopNoteListView/DesktopNoteListView.module.css
+++ b/frontend/src/pages/HomePage/components/NoteListView/DesktopNoteListView/DesktopNoteListView.module.css
@@ -5,8 +5,6 @@
   width: 300px;
   overflow-x: hidden;
   overflow-y: scroll;
-  scrollbar-width: thin;
-  -ms-overflow-style: none;
   scrollbar-width: none;
 }
 
@@ -16,18 +14,19 @@
   flex-direction: column;
   overflow: hidden;
   position: relative;
-  scrollbar-width: none;
 }
 
 .noteListScrollContainer {
   flex: 1;
   overflow-y: scroll;
-  /* padding: 1rem; */
   scrollbar-width: none;
   -webkit-overflow-scrolling: touch;
   scroll-behavior: smooth;
   height: 100%;
-  /* Ensure it takes full height */
+}
+
+.noteListScrollContainerMobile {
+  padding: 1rem;
 }
 
 .noteListLoading,
