--- a/frontend/src/pages/HomePage/components/NoteListView/SearchBar/SearchBar.module.css
+++ b/frontend/src/pages/HomePage/components/NoteListView/SearchBar/SearchBar.module.css
@@ -9,6 +9,11 @@
   width: 100%;
 }
 
+.searchContainerMobile {
+  margin-bottom: 0;
+  padding: 1rem
+}
+
 .searchInput {
   width: 100%;
   padding: 0.5rem 1rem;
@@ -18,6 +23,10 @@
   color: #fff;
   font-size: 0.875rem;
   top: 16px
+}
+
+.searchInputMobile {
+  top: 0;
 }
 
 .searchInput:focus {
