fix-note-filter: fixed the filter, added search to tag. But it's all jacked up. I need to really clean up styling around this area. I don't need the mobile versions, most of that is just css tweaks at this point.

--- a/frontend/src/components/Header/Sidebar/DesktopSidebar.module.css
+++ b/frontend/src/components/Header/Sidebar/DesktopSidebar.module.css
@@ -8,7 +8,9 @@
   width: 180px;
   overflow-y: hidden;
   scrollbar-width: none;
-  scroll-behavior: smooth;
+  scroll-behavior: none;
+  top: 64px;
+  height: calc(100vh - 16px);
 }
 
 .header {
