--- a/frontend/src/pages/ActivityPage/ActivityPage.module.css
+++ b/frontend/src/pages/ActivityPage/ActivityPage.module.css
@@ -2,15 +2,17 @@
   height: 100vh;
   background-color: var(--color-bg);
   color: var(--color-text);
+  display: flex;
 }
 
 .main {
   padding: 80px 1rem 2rem;
-  max-width: 100vw;
+  width: calc(100vw - 182px);
   margin: 0 auto;
 }
 
 .gridContainer {
+  width: 100%;
   display: grid;
   gap: 2rem;
   grid-template-columns: 1fr;
@@ -21,24 +23,27 @@
 
 /* Large screens: side by side layout */
 @media (max-width: 1199px) {
-  .gridContainer {
+  .main {
+    width: 100vw;
+  }
+  /* .gridContainer {
     width: 90vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-  }
+  } */
 }
 
 /* Large screens: side by side layout */
-@media (min-width: 1200px) {
+/* @media (min-width: 1200px) { */
   .gridContainer {
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "radar datagrid";
     align-items: start;
   }
-}
+/* } */
 
 /* Extra large screens: more space for data grid */
 @media (min-width: 1600px) {
