--- a/frontend/src/components/Header/Sidebar/DesktopSidebar.module.css
+++ b/frontend/src/components/Header/Sidebar/DesktopSidebar.module.css
@@ -1,17 +1,13 @@
 .sidebar {
   background-color: #111;
   color: #fff;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  min-width: 180px;
-  max-width: 180px;
   overflow-y: hidden;
   scrollbar-width: none;
   scroll-behavior: none;
-  top: 64px;
-  height: calc(100vh - 16px);
 }
 
 .header {
@@ -71,4 +67,21 @@
 .navItem.active .navIcon {
   opacity: 1;
   color: #fff;
+}
+
+.resizeHandle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 6px;
+  height: 100%;
+  cursor: col-resize;
+  background: transparent;
+  z-index: 2;
+}
+
+.resizeHandle:hover,
+.resizeHandle:focus {
+  background: rgba(255, 255, 255, 0.08);
+  outline: none;
 }
