--- a/frontend/src/pages/NotePage/NotePage.module.css
+++ b/frontend/src/pages/NotePage/NotePage.module.css
@@ -9,10 +9,11 @@
 .main {
   padding: 1rem;
   /* max-width: 1200px; */
-  margin: 0 auto;
-  position: fixed;
-  top: 64px;
+  margin: 0;
+  position: relative;
   width: 100%;
+  height: 100%;
+  overflow: auto;
 }
 
 .titleInput {
@@ -69,9 +70,15 @@
   font-size: 0.95em;
 }
 
-@media (max-width: 768px) and (orientation: portrait) {
+@media (max-width: 768px) {
   .main {
+    position: fixed;
+    top: 64px;
+    left: 0;
+    right: 0;
+    bottom: 0;
     padding: 0rem;
-    width: calc(100vw - 1rem);
+    width: 100vw;
+    overflow: auto;
   }
 }
